2010-09-03 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/Makefile.am:
	Fix make distcheck when distributing tranlations of NACT user's manual.

	* configure.ac:
	Revert inversion of AC_CANONICAL_TARGET and	AM_INIT_AUTOMAKE.

	* src/io-desktop/nadp-writer.c (write_done_write_subitems_list):
	Improve debug messages.

	* src/nact/nact-icommand-tab.c
	(on_tab_updatable_selection_changed): Update example label.
	(parse_parameters): Cleanup code.

2010-09-02 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-reader.c (nadp_reader_iimporter_import_from_uri):
	Do not keep the imported desktop file.

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_write):
	Do not return TRUE if file has not been written due to dispose state.

	* configure.ac: Setup the package URL.

2010-08-30 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/C/nact-starting.xml: Update manual.

	* doc/nact/C/figures/read-only.png: New file.

	* doc/nact/Makefile.am: Remove '$(NULL)' expressions.

	* configure.ac: Bump version number after unstable release.

2010-08-23 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Update NEWS before unstable release.

	* src/core/na-selected-info.c
	(na_selected_info_get_list_from_item, na_selected_info_get_list_from_list):
	Returns a null list when NASelectedInfo object is null.

	* src/plugin-menu/nautilus-actions.c
	(menu_provider_get_background_items, menu_provider_get_file_items,
	menu_provider_get_toolbar_items):
	Do not try to build a menu for Nautilus when NASelectedInfo list is empty.

	* configure.ac: Bump version number after unstable release.

	* NEWS: Update NEWS before unstable release.

	* po/POTFILES.in: Add src/core/na-selected-info.c file.

	* src/core/na-selected-info.c (query_file_attributes):
	Make the error message translatable.


	* src/core/na-tokens.c
	(na_tokens_new_from_selection): Do not get dirname of a null filename.
	(parse_singular): Take care of possibly null data or over-indexing.

	* src/core/na-selected-info.c: