@@ -1,6 +1,9 @@
 2010-09-03 Pierre Wieser <pwieser@trychlos.org>
 
 	* doc/nact/Makefile.am:
+	HTML and PDF installations honor --htmldir= and --pdfdir= options.
+
+	* doc/nact/Makefile.am:
 	Fix make distcheck when distributing tranlations of NACT user's manual.
 
 	* configure.ac:
